# chatshare

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: build.yaml
src/: discord.rs  docker.rs  main.rs  parsers.rs  servers.rs
